dst/assets/css/outcomes.css
 @media only screen and (max-width:340px){
    .fifth{
        line-height: unset !important;
    }
}
 /* full page */
 .o1{
    background: url(../img/design2018/outcome/img/img_outcomes1.png) ;     
    
    margin-left: -5px;
    margin-right: -5px;
 }
 .what_about{
    background: #314216DE;
    color: white;
    margin-top: 50px;
    margin-bottom: 50px;
    padding-top: 25px;
    padding-bottom: 25px;
    
 }
 .what_about h1{
     font-weight: 725;
     padding-left: 13px;
     padding-right: 13px;
 }
 .what_about p{
    padding-left: 13px;
    padding-right: 13px;
 }

 .o2{
     padding-top: 25px;
     padding-bottom: 60px;
     display: flex;
     flex-direction: column;
     padding-left: 8px;
     padding-right: 8px; 
 }
 .o2 h3{
    font-weight: 725;
    font-size: 1.25em;
 }
 .o2_right{
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
 }
 .o2_icons{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
 }
 .o2_icons img{
     padding: 5px;
     flex-grow: 0;
     flex-shrink: 0;
 }
 .o2_icons div{
     display: flex;
     align-items: center;
     
 }
 .o2_item span{
     padding-left: 5px;
 }
 
 

 .o3{
    background: #F6F6F7; 
    margin-left: -8px;
     margin-right: -8px;
     width: auto;
     padding-left: 16px;
     padding-right: 16px;
     padding-top: 30px;
     padding-bottom: 30px;
 }
 .o3 h3{
    font-weight: 725;
    font-size: 1.25em;
 }
 .o3_text span{
     font-weight: 700;
 }
 
 .o3_graphic img{
     max-width: 100%;
     padding-bottom: 10px;
 }
 .o3_graphic span{
     color: rgb(112, 148, 58);
     
 }
 .bold{
     font-weight: 800;
 }
 
 

 /* Styling for larger devices*/
 @media only screen and (min-width:480px){
    .o1{
        margin-left:0px; 
        background: url(../img/design2018/outcome/img/img_outcomes1@2x.png);
        background-size: cover;
        width: 100%;
    }

    .what_about{
        background: #314216DE;
        margin-top: 75px;
        margin-left: 28%;
        margin-bottom: 150px;
        padding-left: 25px;
        padding-top: 20px;
        padding-bottom: 20px;
        padding-right: 64px;
    }

    .what_about h1{
        max-width: 560px;
        font-weight: 750;
        font-size: 28pt;
        padding-left: 0; 
        padding-right: 0;
        color: white;
         
    }

    .what_about p{
        max-width: 560px;
        font-size: 110%;
        padding-left: 0; 
        padding-right: 0;
        color: white;
         
    }
    .o2{
        background: white;
        display: flex;
        flex-direction: row;
        align-items: center;
        justify-content: center;
        padding-top: 50px;
        padding-bottom: 50px;
        padding-left: 0;
    }

    .evidence_based{
        max-width: 435px;
    }
    
    
    .o2_right{
        display: flex;
        flex-direction: row;
        justify-content: flex-start;
        padding: 0;
        margin: 0;
    }
    .o2_item{
        flex: 1;
        padding-left: 80px;
    }
    .o2 h3{
        font-weight: 709;
        font-size: 1.25em;
    }
    .o2_icons{
        background: white;
        display: flex;
        flex-direction: column;
        align-content: space-around;
        flex-wrap: nowrap;
        
    }
    .o2_icons img{
        align-self: center;
        padding: 10px;
    }
    .o3{
        display: flex;
        flex-direction: row-reverse;
        
        margin-left: 0;
        margin-right: 0;
        padding-bottom: 150px;
    }
    .o3_graphic{
        display: flex;
        flex-direction: column;
        
    }
    .o3_item{
        flex:1;
        
        padding-left: 64px;

    }
    .o3_graphic img{
        max-width: 400px;
    }
    .o3_graphic{
        padding-left: 64px;
    }
    .o3_text{
        padding-right: 64px;
    }
    .o3_text h3, .o3_text p{
        max-width: 560px;
        
    }
    .close_caption{
        text-align: center;
    }
}

